syntax = "proto3";

package cosmos.msg.textual.v1;

import "cosmos/tx/signing/v1beta1/signing.proto";

// TextualData represents all the information needed to generate
// the textual SignDoc (which is a []Screen). It is meant to be
// used as an internal type in Textual's implementations.
message TextualData {
  // body_bytes is a protobuf serialization of a TxBody that matches the
  // representation in SignDoc.
  bytes body_bytes = 1;

  // auth_info_bytes is a protobuf serialization of an AuthInfo that matches the
  // representation in SignDoc.
  bytes auth_info_bytes = 2;

  // signer_data represents all data in Textual's SignDoc that are not
  // inside the Tx body and auth_info.
  cosmos.tx.signing.v1beta1.SignerData signer_data = 3;
}